<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".liste_election_admin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints,UnknownIdInLayout"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:id="@+id/image_ex_el_ad"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/election"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/txt_ex_el_ad"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/id_res3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="arrele"
                android:text="@string/arreter" />

            <Button
                android:id="@+id/id_mod3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="listchoix"
                android:text="@string/modification" />

            <Button
                android:id="@+id/id_sup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="supele"
                android:text="@string/supprimer" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>