<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ajouter_election">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="150dp"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/election" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/image"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/editText5"
        android:layout_width="143dp"
        android:layout_height="47dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nomelection"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        tools:ignore="TextViewEdits" />

    <ImageView
        android:id="@+id/img_choix"
        android:layout_width="113dp"
        android:layout_height="78dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/img"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/nom_elec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/img_choix"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <Button
        android:id="@+id/id_cree_ele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ajout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom_elec" />

</androidx.constraintlayout.widget.ConstraintLayout>